fixed profiles and changed some color values to improve readability

--- a/midnight.css
+++ b/midnight.css
@@ -12,7 +12,7 @@
 .scroller__13d83 /* stream spectators list */,
 .container__13b2a /* vc stats popout */,
 .root_a28985:not(.carouselModal__7e22f) /* focused popups (like channel info popup) but not image popups */ {
-        backdrop-filter: blur(3px);
+        backdrop-filter: blur(5px);
         background: var(--popout-bg) !important;
 }
 .queryContainer_c359fe /* message search box header */,
@@ -21,25 +21,25 @@
 .channelHeader_ea0f89 /* inbox channel header */,
 .footer__6b9ef /* pinned messages footer */,
 .header__6d44a /* threads menu header */ {
-        background: var(--popout-bg-4);
+        background: var(--popout-bg-3);
 }
 /* use before element to prevent submenus like reactions becoming positioned incorrectly https://stackoverflow.com/q/52937708 */
 .menu__088f7:not(#account)::before /* right-click menus */,
-.userProfileInnerThemedNonPremium_ed9022::before /* profile popout, need to do this so status and acc switcher are correctly positioned */
+.userProfileInnerThemedNonPremium_b64fb4::before /* profile popout, need to do this so status and acc switcher are correctly positioned */
 {
         content: "";
-        backdrop-filter: blur(3px);
+        backdrop-filter: blur(5px);
         background: var(--popout-bg) !important;
         width: 100%;
         height: 100%;
         position: absolute;
 }
-.overlayBackground__2666e /* inner part of profile popouts */,
+.overlayBackground__345c9 /* inner part of profile popouts */,
 .messageGroupWrapper__1fce2 /* pinned messages */ {
-        background: var(--popout-bg-3) !important;
+        background: var(--popout-bg-2) !important;
 }
-.userProfileOuterUnthemed_e14365 /* redundant background part of profile popouts */,
-.userProfileInnerThemedNonPremium_ed9022 /* original profile popout bg */,
+.userProfileOuterUnthemed__9741c /* redundant background part of profile popouts */,
+.userProfileInnerThemedNonPremium_b64fb4 /* original profile popout bg */,
 .emojiPicker__5e2e2 /* redundant bg of reaction emoji picker */,
 #emoji-picker-tab-panel>.header_e5d8b2 /* reaction emoji picker header */,
 .wrapper__91b2c /* emoji picker headers */,
