--- a/midnight.theme.css
+++ b/midnight.theme.css
@@ -67,13 +67,11 @@
 	--icon-spin-transition: 1s ease; /* round icon button spin (settings, emoji, etc.) */
 
         /* color of popout menus like right-clicking messages */
-        --popout-bg: hsl(220 15% 10% / 0.8);
-        /* color of message search box */
-        --popout-bg-2: hsl(220 15% 10% / 0.9);
+        --popout-bg: hsl(220 15% 10% / 0.9);
         /* color of the inner part of unthemed profile popouts */
-        --popout-bg-3: hsl(220 15% 8% / 0.6);
+        --popout-bg-2: hsl(220 15% 8% / 0.6);
         /* transparent highlight for headers */
-        --popout-bg-4: hsl(220 15% 12% / 0.5);
+        --popout-bg-3: hsl(220 15% 12% / 0.5);
 
         /* filter uncolorable elements to fit theme */
         /* (just set to none, they're too much work to configure) */
